# akup

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 846c327eba8b_initial_schema.py
app/: auth.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  evidence.py  organization.py  user.py
app/routers/: auth.py  evidence.py  organizations.py  users.py
app/schemas/: auth.py  evidence.py  organization.py  user.py
app/services/: ai.py  evidence.py  names.py  organization.py  user.py
app/static/: add.html  dashboard.html  detail.html  index.html
app/static/css/: style.css
app/static/js/: app.js
cli/: client.py  config.py  display.py  main.py
cli/commands/: evidence.py  init.py  org.py  user.py
src/akup/: aggregator.py  artifacts.py  cli.py  config.py  git_ops.py  hooks.py  models.py  recorder.py
tests/: conftest.py  test_aggregator.py  test_auth.py  test_config.py  test_evidence.py  test_git_ops.py  test_hooks.py  test_models.py  test_recorder.py  test_users.py
